[workspace]
resolver = "2"
members = [
    "nora-registry",
    "fuzz",
]

[workspace.package]
version = "0.8.4"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Pavel Volkov <devitway@gmail.com>"]
repository = "https://github.com/getnora-io/nora"
homepage = "https://getnora.dev"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
sha2 = "0.11"
async-trait = "0.1"
hex = "0.4"

[workspace.lints.clippy]
or_fun_call = "deny"
redundant_clone = "deny"
collection_is_never_read = "deny"
naive_bytecount = "deny"
stable_sort_primitive = "deny"
large_types_passed_by_value = "deny"
assigning_clones = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [] }

[profile.release]
debug = false
strip = true
codegen-units = 4
panic = "abort"
lto = "thin"

# Maximum optimization for GitHub Releases and published binaries
[profile.release-official]
inherits = "release"
codegen-units = 1
lto = "fat"
